<resources>
    <!-- Register and Login -->
    <string name="app_name">BookSpresso</string>
    <string name="create_account">Create Account</string>
    <string name="hint_enterfirstname">Enter first name here…</string>
    <string name="hint_enterlastname">Enter last name here…</string>
    <string name="hint_enteremail">Enter email here…</string>
    <string name="hint_enterpassword">Enter password here…</string>
    <string name="btn_RegisterNow">Register</string>
    <string name="or">Or</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="login_account">LogIn</string>
    <string name="btnLogin">Login</string>
    <string name="noAccount_RegisterHere">Don\'t have an account? Register here!</string>
    <string name="btn_Login">Login</string>

    <!-- Book Data -->
    <string name="title_format">Title: %s</string>
    <string name="author_format">Author: %s</string>
    <string name="genre_format">Genre: %s</string>
    <string name="published_year_format">Published Year: %d</string>
    <string name="isbn_format">ISBN: %s</string>
    <string name="pages_format">Pages: %d</string>
    <string name="description_format">Description: %s</string>
    <string name="status_format">Status: %s</string>
    <string name="empty_string"> %s</string>

    <!-- Statistic Cards -->
    <string name="reading_goal">Today\'s Goal: Read 20 pages</string>
    <string name="total_books">Total Books</string>
    <string name="bookicons">BookIcons</string>
    <string name="read_books">Finished Books</string>
    <string name="loaned_books">Loaned Books</string>
    <string name="add_new_book">Add new Book</string>

    <!-- Book data ui -->
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="published_year">Published Year</string>
    <string name="isbn">ISBN</string>
    <string name="page_number">Page Number</string>
    <string name="description">Description</string>
    <string name="borrowed_to">Borrowed To</string>
    <string name="borrowed_date_yyyy_mm_dd">Borrowed Date (YYYY-MM-DD)</string>
    <string name="status">Status:</string>
    <string name="image">Select Image:</string>
    <string name="book_image">Book Image</string>
    <string name="select_image">Select Image</string>
    <string name="add_book">Add Book</string>
    <string name="favorite">Favorite</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_here">Don\'t have na account? Register here!</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_book">Edit Book</string>
    <string name="logo_image">Logo image</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="_40_completed">40% completed</string>
    <string name="here_are_your_book_stats">Here are your book stats:</string>
    <string name="_0">0</string>

    <!-- Book Status Enums -->
    <string-array name="book_status_options">
        <item>To Read</item>
        <item>Reading</item>
        <item>Finished</item>
        <item>Abandoned</item>
        <item>Borrowed</item>
    </string-array>
</resources>