<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_below="@+id/toolbar"
        tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <!-- textView: add new book -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_book"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/green_900"
            android:gravity="center"/>

        <!-- horizontal line for add new book -->
        <View
            android:layout_width="110dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/green_700"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <!-- TextView: Title -->
        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:paddingBottom="20dp"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <!-- TextView: Author -->
        <EditText
            android:id="@+id/etAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author"
            android:paddingBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="textCapWords" />

        <!-- TextView: Genre -->
        <EditText
            android:id="@+id/etGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genre"
            android:paddingBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="textCapWords" />

        <!-- TextView: Published Year -->
        <EditText
            android:id="@+id/etPublishedYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/published_year"
            android:paddingBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="textCapWords" />

        <!-- TextView: ISBN -->
        <EditText
            android:id="@+id/etIsbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/isbn"
            android:paddingBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <!-- TextView: Page Number -->
        <EditText
            android:id="@+id/etPageNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/page_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingBottom="20dp" />

        <!-- TextView:  Description -->
        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:paddingBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <!-- TextView: Borrowed To -->
        <EditText
            android:id="@+id/etBorrowedTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/borrowed_to"
            android:visibility="gone"
            android:importantForAutofill="no"
            android:inputType="textCapWords" />

        <!-- TextView: Borrowed Date -->
        <EditText
            android:id="@+id/etBorrowedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/borrowed_date_yyyy_mm_dd"
            android:visibility="gone"
            android:paddingBottom="30dp"
            android:importantForAutofill="no"
            android:inputType="date" />

        <!-- TextView: Status -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:paddingStart="5dp"
                android:layout_weight="1"
                tools:ignore="RtlSymmetry" />

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="7dp"
                android:layout_height="50dp"
                android:layout_weight="2.5"
                android:background="@drawable/spinner_background"
                android:padding="10dp" />
        </LinearLayout>

        <!-- TextView: Book Image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:paddingStart="5dp"
                android:layout_weight="1"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/ivBookImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/img_default_book_image"
                android:scaleType="centerCrop"
                android:visibility="gone"
                android:contentDescription="@string/book_image" />

            <Button
                android:id="@+id/btnSelectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:textSize="18sp"
                android:textColor="@color/app_background"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:drawableStart="@drawable/ic_image"
                android:backgroundTint="@color/readBooks"
                android:background="@drawable/select_image_rounded"
                android:layout_weight="1"/>
        </LinearLayout>

        <!-- Button: Add Book - Cancel -->
        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btn_ripple_effect"
                android:backgroundTint="@color/green_900"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add_book"
                android:textColor="@color/app_background"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_ripple_effect"
                android:backgroundTint="@color/btn_delete"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cancel"
                android:textColor="@color/app_background"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
</RelativeLayout>
