<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        tools:context=".activities.RegisterActivity">

        <!-- Image -->
        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="330dp"
            android:src="@drawable/img_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />

        <!-- Create Account Text -->
        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/brown_900"
            android:fontFamily="@font/poppins_medium"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@id/image_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- FirstName -->
        <EditText
            android:id="@+id/etFirstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enterfirstname"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColorHint="@color/hint_color"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/tvCreateAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:autofillHints="enter firstname..." />

        <!-- LastName -->
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enterlastname"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textColorHint="@color/hint_color"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/etFirstname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:autofillHints="enter lastname..."/>

        <!-- Email -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enteremail"
            android:textColorHint="@color/hint_color"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:autofillHints="enter email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/etLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            />

        <!-- PAssword -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enterpassword"
            android:textColorHint="@color/hint_color"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:importantForAutofill="no" />

        <!-- Confirm Password -->
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/hint_color"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            android:importantForAutofill="no" />

        <!-- Progress Bar -->
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progressBar"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Register Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_RegisterNow"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/green_900"
            android:textColor="@color/app_background"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- OR -->
        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/or"
            app:layout_constraintTop_toBottomOf="@id/btnRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Login Redirect -->
        <TextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:textStyle="italic"
            android:textColor="@color/green_900"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvOr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
